# TOA_USRP_LimeSDR

./: CMakeLists.txt  plot_iq.py  tx_event.csv
common/utils/T/tracer/: T_messages.txt
demo/: nr_mib_decode.c  nr_ssb_live_gscn.c  nr_ssb_scan.c  nr_ssb_selftest.c  nr_synth_ssb.c  record_lime_gscn_scan.c  record_lime_iq.c  test_lime_rx.c  test_radio_lifecycle.c  toa_prs_offline.c  toa_run_realtime.c
executables/: nr-ssb-anchor.c  nr-toa-softmodem.h  nr-toa-threads.h  nr-toa-uesoftmodem.c
include/common/: cf32.h  cli.h  demo_rx_defaults.h  error.h  log.h  ring_buffer.h
include/io/: capture_session.h  iq_meta.h  iq_reader.h
include/nr/: gscn.h  mib.h  nr_fft.h  nr_grid.h  nr_sequence.h  nr_types.h  pbch_decode.h  pbch_dmrs.h  pbch_re.h  polar.h  ssb_sync.h
include/pipeline/: offline_runner.h
include/radio/: radio_device.h  radio_factory.h  radio_lime.h
include/recorder/: iq_recorder.h
include/toa/: prs_detector.h  toa_context.h  toa_pipeline.h  toa_solver.h  toa_types.h
openair1/PHY/NR_POSITIONING/: nr_pos_api.h  nr_pos_provider_if.h  nr_pos_types.h  nr_toa_ue.h
openair1/PHY/NR_POSITIONING/common/: nr_anchor_db.c  nr_anchor_write.c  nr_clock_mgr.c  nr_epoch_mgr.c  nr_iq_ring.c  nr_meas_assoc.c  nr_pos_solver.c  nr_radio_if.c  nr_ssb_beacon_gen.c  nr_ssb_tx_scheduler.c  nr_toa_cfg_loader.c  nr_toa_ue_helpers.c  nr_trace_sink.c
openair1/PHY/NR_POSITIONING/prs/: nr_prs_chest.c  nr_prs_extract.c  nr_prs_provider.c  nr_prs_toa_est.c
openair1/PHY/NR_POSITIONING/ssb/: nr_pbch.c  nr_ssb_chest.c  nr_ssb_extract.c  nr_ssb_provider.c  nr_ssb_ref.c  nr_ssb_sync.c  nr_ssb_toa_est.c
openair1/PHY/NR_POSITIONING/tests/: test_prs_toa.c  test_solver.c  test_ssb_sync.c  test_ssb_toa.c
precise_trials_run_20260409_113022/: pci84_gain58.conf  pci84_gain64.conf
precise_trials_run_20260409_113022/pci84_gain58_iq/: pbch_nearmiss_seq00_ts43580542_cf2114550000_fs30720000_pci84_ssb6_pss265_dmrs152.c16  pbch_nearmiss_seq00_ts43580542_cf2114550000_fs30720000_pci84_ssb6_pss265_dmrs152.meta.txt  pbch_nearmiss_seq01_ts44826910_cf2114550000_fs30720000_pci84_ssb4_pss274_dmrs185.c16  pbch_nearmiss_seq01_ts44826910_cf2114550000_fs30720000_pci84_ssb4_pss274_dmrs185.meta.txt
precise_trials_run_20260409_113022/pci84_gain61_iq/: pbch_nearmiss_seq00_ts43540429_cf2114550000_fs30720000_pci84_ssb4_pss289_dmrs155.c16  pbch_nearmiss_seq00_ts43540429_cf2114550000_fs30720000_pci84_ssb4_pss289_dmrs155.meta.txt  pbch_ok_seq01_ts44786797_cf2114550000_fs30720000_pci84_ssb3_pss301_dmrs771.meta.txt
precise_trials_run_20260409_113022/pci84_gain64_iq/: pbch_nearmiss_seq01_ts44868329_cf2114550000_fs30720000_pci84_ssb4_pss256_dmrs115.c16  pbch_nearmiss_seq01_ts44868329_cf2114550000_fs30720000_pci84_ssb4_pss256_dmrs115.meta.txt  pbch_ok_seq00_ts43508292_cf2114550000_fs30720000_pci84_ssb3_pss253_dmrs667.meta.txt
radio/COMMON/: common_lib.h
radio/LIME/: lime_lib.cpp
radio/USRP/: usrp_lib.cpp
saved_iq/pci84_pbch_ok_20260409/: OFFLINE_MIB_REPORT.md  README.md  offline_mib_summary.json  pbch_ok_seq00_ts43508292_cf2114550000_fs30720000_pci84_ssb3_pss253_dmrs667.c16  pbch_ok_seq01_ts44786797_cf2114550000_fs30720000_pci84_ssb3_pss301_dmrs771.c16
src/common/: cli.c  log.c  ring_buffer.c
src/io/: capture_session.c  iq_meta.c  iq_reader.c
src/nr/: gscn.c  mib.c  nr_fft.c  nr_grid.c  nr_sequence.c  pbch_decode.c  pbch_dmrs.c  pbch_re.c  polar.c  ssb_sync.c
src/pipeline/: offline_runner.c
src/radio/: radio_factory.c  radio_lime.c
src/recorder/: iq_recorder.c
src/toa/: prs_detector.c  toa_context.c  toa_estimator.c  toa_pipeline.c  toa_solver_wls.c
targets/PROJECTS/NR-TOA/CONF/: anchor0.ssb.usrpb210.conf  anchor1.ssb.usrpb210.conf  anchors.csv  ue.toa.prs.usrpb210.conf  ue.toa.ssb.limesdr.conf  ue.toa.ssb.usrpb210.conf  ue.toa.ssb.usrpb210.ctc3509.fixed.conf  ue.toa.ssb.usrpb210.ctc3509.lowrate.conf  ue.toa.ssb.usrpb210.lowrate.conf  ue.toa.ssb.usrpb210.n1_2114.fixed.conf  ue.toa.ssb.usrpb210.n1_422910_pci84.precise.conf  ue.toa.ssb.usrpb210.n1_422910_pci84.ultrarate.conf  ue.toa.ssb.usrpb210.unicom3550.conf  ue.toa.ssb.usrpb210.unicom3550.lowrate.conf  ue.toa.ssb.usrpb210.unicom3550.lowrate60.conf  ue.toa.ssb.usrpb210.unicom3550.midrate.conf  ue.toa.ssb.usrpb210.unicom3550.oai.conf  ue.toa.ssb.usrpb210.unicom3550.usb2.conf  ue.toa.ssb.usrpb210.unicom3550.usb2.fixed355008.conf  ue.toa.ssb.usrpb210.unicom3550.usb2.fixed355872.conf  ue.toa.ssb.usrpb210.unicom3550.usb3.fixed355872.conf  ue.toa.ssb.usrpb210.unicom3550.usb3.sweep.conf
tools/: check_ssb_log.sh  export_toa_csv.py  plot_toa_epoch.py  replay_toa_iq.c  run_n1_pci84_precise_trials.sh  run_ssb_outdoor.sh
