cmake_minimum_required(VERSION 3.16)
project(TOA_USRP_LimeSDR C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_compile_options(
  -Wall
  -Wextra
  -Wpedantic
)

find_package(PkgConfig REQUIRED)
pkg_check_modules(SOAPYSDR REQUIRED SoapySDR)

include_directories(
  ${CMAKE_SOURCE_DIR}/include
  ${CMAKE_SOURCE_DIR}/include/radio
  ${CMAKE_SOURCE_DIR}/include/recorder
  ${CMAKE_SOURCE_DIR}/include/toa
  ${CMAKE_SOURCE_DIR}/include/nr
  ${CMAKE_SOURCE_DIR}/include/common
  ${SOAPYSDR_INCLUDE_DIRS}
)

link_directories(
  ${SOAPYSDR_LIBRARY_DIRS}
)

# IO + offline pipelineпјҲе…ғж•°жҚ® / иҜ»еқ— / еҪ•еҲ¶ session / зҰ»зәҝеҫ?зҺ?пј?
add_library(toa_io STATIC
  src/io/iq_meta.c
  src/io/iq_reader.c
  src/io/capture_session.c
  src/recorder/iq_recorder.c
)

add_library(toa_pipeline STATIC
  src/pipeline/offline_runner.c
)

target_link_libraries(toa_pipeline PUBLIC toa_io)

set(COMMON_CLI_SRC src/common/cli.c)

# IQ еҪ•еҲ¶зЁӢеәҸпјҲе…јдҪ? Lime RX иҝһйҖҡжҖ§йӘҢиҜҒпјӣеҺ? test_lime_rx е·ІеҗҲе№¶еҲ йҷӨпјү
add_executable(record_lime_iq
  demo/record_lime_iq.c
  src/radio/radio_factory.c
  src/radio/radio_lime.c
  src/common/log.c
  ${COMMON_CLI_SRC}
)

target_link_libraries(record_lime_iq
  nr_core
  toa_io
  m
  ${SOAPYSDR_LIBRARIES}
)

target_compile_options(record_lime_iq PRIVATE ${SOAPYSDR_CFLAGS_OTHER})

# жҢ? NR GSCNпјҲFR1 <3 GHz еҗҢж?Ҙж …ж јпјүжӯҘиҝӣдё?еҝғй?‘пјҢжҜҸзӮ№зӢ?з«? IQ еҪ•еҲ¶пјӣеҸҜеҫ?зҺ?еӨҡиҪ®
add_executable(record_lime_gscn_scan
  demo/record_lime_gscn_scan.c
  src/radio/radio_factory.c
  src/radio/radio_lime.c
  src/common/log.c
  ${COMMON_CLI_SRC}
)

target_link_libraries(record_lime_gscn_scan
  nr_core
  toa_io
  m
  ${SOAPYSDR_LIBRARIES}
)

target_compile_options(record_lime_gscn_scan PRIVATE ${SOAPYSDR_CFLAGS_OTHER})

# radio з”ҹе‘Ҫе‘ЁжңҹиҮ?жЈҖпјҲphase0пј?
add_executable(test_radio_lifecycle
  demo/test_radio_lifecycle.c
  src/radio/radio_factory.c
  src/radio/radio_lime.c
  src/common/log.c
)

target_link_libraries(test_radio_lifecycle
  ${SOAPYSDR_LIBRARIES}
)

target_compile_options(test_radio_lifecycle PRIVATE ${SOAPYSDR_CFLAGS_OTHER})

# NR жЁЎеқ—пјҲSSBжү?жҸҸиө·жӯҘпјү
add_library(nr_core
  src/nr/gscn.c
  src/nr/nr_sequence.c
  src/nr/ssb_sync.c
  src/nr/nr_fft.c
  src/nr/nr_grid.c
  src/nr/pbch_dmrs.c
  src/nr/pbch_re.c
  src/nr/pbch_decode.c
  src/nr/polar.c
  src/nr/mib.c
)

# nr_core is pure C signal processing; no Soapy compile flags needed.

# TOA жЁЎеқ—еҹәз?Җеә“пјҲе…ҲжҸҗдҫӣйҮҚжһ„й?Ёжһ¶пј?
add_library(toa_core
  src/toa/toa_context.c
  src/toa/prs_detector.c
  src/toa/toa_pipeline.c
  src/toa/toa_estimator.c
  src/toa/toa_solver_wls.c
  src/common/ring_buffer.c
  src/common/log.c
)

# toa_core does not use Soapy.

# зҰ»зәҝ PRS/TOA жЎҶжһ¶зЁӢеәҸ
add_executable(toa_prs_offline
  demo/toa_prs_offline.c
  ${COMMON_CLI_SRC}
)

target_link_libraries(toa_prs_offline
  toa_core
  toa_pipeline
  toa_io
  m
)

# иҝ‘е®һж—? TOA жЎҶжһ¶зЁӢеәҸ
add_executable(toa_run_realtime
  demo/toa_run_realtime.c
  src/radio/radio_factory.c
  src/radio/radio_lime.c
)

target_link_libraries(toa_run_realtime
  toa_core
  m
  ${SOAPYSDR_LIBRARIES}
)

target_compile_options(toa_run_realtime PRIVATE ${SOAPYSDR_CFLAGS_OTHER})

# зҰ»зәҝ SSB жү?жҸҸзЁӢеәҸпјҲPhase Bпј?
add_executable(nr_ssb_scan
  demo/nr_ssb_scan.c
  src/common/log.c
  ${COMMON_CLI_SRC}
)

target_link_libraries(nr_ssb_scan
  nr_core
  toa_pipeline
  toa_io
  m
)

add_executable(nr_ssb_live_gscn
  demo/nr_ssb_live_gscn.c
  src/radio/radio_factory.c
  src/radio/radio_lime.c
  src/common/log.c
  ${COMMON_CLI_SRC}
)

target_link_libraries(nr_ssb_live_gscn
  nr_core
  m
  ${SOAPYSDR_LIBRARIES}
)

target_compile_options(nr_ssb_live_gscn PRIVATE ${SOAPYSDR_CFLAGS_OTHER})

# MIB и§Јз Ғй“ҫпјҲеҗ? SSB + DMRS еҜ№йҪҗпјӣеҺҹ nr_pbch_dmrs_probe е·ІеҗҲе№¶еҲ йҷӨпјү
add_executable(nr_mib_decode
  demo/nr_mib_decode.c
  src/common/log.c
  ${COMMON_CLI_SRC}
)

target_link_libraries(nr_mib_decode
  nr_core
  toa_pipeline
  toa_io
  m
)

add_executable(nr_ssb_selftest demo/nr_ssb_selftest.c)
target_link_libraries(nr_ssb_selftest nr_core m)

add_executable(nr_synth_ssb demo/nr_synth_ssb.c)
target_link_libraries(nr_synth_ssb nr_core toa_io m)